--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,55 @@
-/static/
-/media/
-/project/local_settings.py
+/djangoapp/static/
+/djangoapp/media/
+/djangoapp/project/local_settings.py
 gunicorn-error-log
 __localcode
 /data/
+
 # Django #
 *.log
 *.pot
 *.pyc
 __pycache__
 db.sqlite3
-media
 
 # Backup files #
 *.bak
 
 # If you are using PyCharm #
+# User-specific stuff
 .idea/**/workspace.xml
 .idea/**/tasks.xml
-.idea/dictionaries
+.idea/**/usage.statistics.xml
+.idea/**/dictionaries
+.idea/**/shelf
+
+# AWS User-specific
+.idea/**/aws.xml
+
+# Generated files
+.idea/**/contentModel.xml
+
+# Sensitive or high-churn files
 .idea/**/dataSources/
 .idea/**/dataSources.ids
-.idea/**/dataSources.xml
 .idea/**/dataSources.local.xml
 .idea/**/sqlDataSources.xml
 .idea/**/dynamic.xml
 .idea/**/uiDesigner.xml
+.idea/**/dbnavigator.xml
+
+# Gradle
 .idea/**/gradle.xml
 .idea/**/libraries
-*.iws /out/
+
+# File-based project format
+*.iws
+
+# IntelliJ
+out/
+
+# JIRA plugin
+atlassian-ide-plugin.xml
 
 # Python #
 *.py[cod]
@@ -120,17 +141,3 @@ GitHub.sublime-settings
 !.vscode/launch.json
 !.vscode/extensions.json
 .history
-
-# Personal additions
-__pycache__/
-*.pyc
-__localcode
-venv
-env
-.DS_Store
-local_settings.py
-_local_settings.py
-gunicorn-error-log
-db.sqlite3
-db copy.sqlite3
-static/
