Configuring django-summernote as an HTML editor in TextField on models

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "autocompleting",
         "prepopulating",
-        "slugified"
+        "slugified",
+        "summernote"
     ]
 }
