python-dotenv for.env on server and django-axes for security in admin

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "cSpell.words": [
         "autocompleting",
+        "COOLOFF",
+        "dotenv",
         "prepopulating",
         "slugified",
         "summernote"
