Adding docstrings and Starting blog.urls and blog.view tests with Pytest

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,12 @@
 {
     "cSpell.words": [
         "autocompleting",
+        "cloudflare",
+        "codeview",
         "COOLOFF",
         "dotenv",
+        "dracula",
+        "fullscreen",
         "prepopulating",
         "slugified",
         "summernote"
