--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
 asgiref==3.8.1
 astroid==3.2.2
+attrs==23.2.0
 autopep8==2.2.0
 bleach==6.1.0
+certifi==2024.6.2
+cffi==1.16.0
 colorama==0.4.6
+coverage==7.5.3
 dill==0.3.8
 Django==5.0.6
 django-axes==6.4.0
@@ -11,31 +15,45 @@ django-stubs-ext==5.0.2
 django-summernote==0.8.20.0
 docopt==0.6.2
 flake8==7.0.0
+h11==0.14.0
+idna==3.7
 iniconfig==2.0.0
 isort==5.13.2
 mccabe==0.7.0
+mock==5.1.0
 mypy==1.10.0
 mypy-extensions==1.0.0
 mypy-lang==0.5.0
+outcome==1.3.0.post0
 packaging==24.0
 parameterized==0.9.0
 pillow==10.3.0
 platformdirs==4.2.2
 pluggy==1.5.0
 pycodestyle==2.11.1
+pycparser==2.22
 pyflakes==3.2.0
 pylint==3.2.3
+PySocks==1.7.1
 pytest==8.2.2
 pytest-django==4.8.0
+pytest-mock==3.14.0
 pytest-watch==4.2.0
 python-dotenv==1.0.1
+selenium==4.21.0
 setuptools==70.0.0
 six==1.16.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
 sqlparse==0.5.0
 tomlkit==0.12.5
+trio==0.25.1
+trio-websocket==0.11.1
 types-PyYAML==6.0.12.20240311
 typing_extensions==4.12.1
 tzdata==2024.1
+urllib3==2.2.1
 watchdog==4.0.1
 webencodings==0.5.1
 wheel==0.43.0
+wsproto==1.2.0
